force-app/main/default/objects/MaximumProductCapicity__mdt/MaximumProductCapicity__mdt.object-meta.xml
<CustomObject>
    <label>MaximumProductCapicityILM</label>
    <pluralLabel>MaximumProductCapicitysILM</pluralLabel>
</CustomObject>