force-app/main/default/objects/MaximumProductCapicity__mdt/fields/Heating_Type__c.field-meta.xml
<CustomField>
    <fullName>Heating_Type__c</fullName>
    <label>Heating Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diesel</fullName>
                <default>true</default>
                <label>Diesel</label>
            </value>
            <value>
                <fullName>Dual (Electric &amp; Steam)</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Steam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>