force-app/main/default/objects/MaximumProductCapicity__mdt/fields/Loadtype__c.field-meta.xml
<CustomField>
    <fullName>Loadtype__c</fullName>
    <label>Loadtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dry_load_capacity__c</fullName>
            </value>
            <value>
                <fullName>Iron_Load_capacity__c</fullName>
            </value>
            <value>
                <fullName>Wash_Load_capacity__c</fullName>
            </value>
            <value>
                <fullName>Dry</fullName>
                <isActive>false</isActive>
                <label>Dry</label>
            </value>
            <value>
                <fullName>Iron</fullName>
                <isActive>false</isActive>
                <label>Iron</label>
            </value>
            <value>
                <fullName>wash</fullName>
                <isActive>false</isActive>
                <label>wash</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>