force-app/main/default/objects/MaximumProductCapicity__mdt/fields/Maximum_Capicity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Capicity__c</fullName>
    <label>Maximum Capicity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>